# borgweb

./: .flaskenv  .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml
borgweb/: wsgi.py
borgweb/static/: style.css
borgweb/templates/: base.html
borgweb/views/: __init__.py  auth.py
js/: gulpfile.js  gulpfile.lib.js  package.json
src/borgweb/: __init__.py  _version.py  config.py  db.py  plugins.py  settings.py  wsgi.py
src/borgweb/api/: routes.py
src/borgweb/auth/: routes.py
src/borgweb/auth/templates/: login.html
src/borgweb/dashboard/: routes.py
src/borgweb/dashboard/templates/: dashboard.html
src/borgweb/database/: __init__.py  models.py
src/borgweb/logs/: routes.py
src/borgweb/plugins/: __init__.py
src/borgweb/plugins/auth/: auth.py
src/borgweb/plugins/auth/templates/auth/: login.html
src/borgweb/plugins/backup/: backup.py
src/borgweb/plugins/backup/templates/backup/: backup_index.html  backup_info.html
src/borgweb/plugins/bash/: __init__.py  bash.py
src/borgweb/plugins/dashboard/: dashboard.py
src/borgweb/plugins/logs/: logs.py
src/borgweb/plugins/repos/: repos.py
src/borgweb/plugins/repos/static/: repos.js
src/borgweb/plugins/repos/templates/repos/: create_repo.html  index.html  new_repo.html  repo_index.html  repo_list.html  repo_settings.html
src/borgweb/plugins/settings/: settings.py
src/borgweb/plugins/settings/templates/settings/: index.html
src/borgweb/repositories/: routes.py
src/borgweb/settings/: routes.py
src/borgweb/settings/templates/: settings.html
src/borgweb/static/: style.css
src/borgweb/templates/: base.html  logs.html  repositories.html  temp.html
src/borgweb/testsuite/: __init__.py  repos.py
src/borgweb/views/: auth.py
